# RaSa

./: .gitignore  AGENTS.md  Retrieval.py  pyproject.toml  sugarcrepe-pedes.py
configs/: PS_cuhk_pedes.yaml  PS_icfg_pedes.yaml  PS_rstp_reid.yaml  sugarcrepe_cuhk_pedes.yaml  sugarcrepe_icfg_pedes.yaml  sugarcrepe_rstp_reid.yaml
dataset/: __init__.py
env/: .env.example
models/: tokenization_bert.py  vit.py  xbert.py
output/cuhk-pedes/evaluation/: config.yaml
shell/: cuhk-eval.sh  data_process.sh  icfg-eval.sh  rstp-eval.sh  sugarcrepe_eval_rstpreid.sh
