[project]
name = "rasa"
version = "0.1.0"
description = "RaSa: Relation and Sensitivity Aware Representation Learning for Text-based Person Search"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.48.0,<5",
    "timm>=1.0.0",
    "numpy",
    "pillow",
    "ruamel.yaml",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
