[project]
name = "rasa"
version = "0.1.0"
description = "RaSa: Relation and Sensitivity Aware Representation Learning for Text-based Person Search"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.11.0",
    "torchvision==0.26.0",
    "transformers==4.57.6",
    "timm==1.0.27",
    "numpy==1.26.4",
    "pillow==11.3.0",
    "ruamel.yaml==0.19.1",
    "protobuf==7.35.1",
    "gdown>=6.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
